--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="refresh" content="0; url=https://discord.gg/Bp7s3VsH3g" />
+  <meta http-equiv="refresh" content="0; url=https://discord.gg/WGvdJ6D53g" />
   <title>Redirecting...</title>
 </head>
 <body>
-  <p>If you are not redirected, <a href="https://discord.gg/Bp7s3VsH3g">click here</a>.</p>
+  <p>If you are not redirected, <a href="https://discord.gg/WGvdJ6D53g">click here</a>.</p>
 </body>
 </html>
